--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.477.0",
     "motion": "^12.5.0",
     "react": "^19.0.0",
