--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.2",
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "lucide-react": "^0.477.0",
